--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,9 +56,7 @@
                 })
     </script>
     <script src="/app/controller/common.js"></script>
-    <script src="/app/directive/breadcrumbs.js"></script>
-    <script src="/app/directive/ng-infinite-scroll.js"></script>
-    <script src="/app/directive/angular-esc-action.js"></script>
+    <script src="/app/controller/news.js"></script>
     <script src="/app/controller/data-plug.js"></script>
     <script src="/app/controller/register.js"></script>
     <script src="/app/controller/publish.js"></script>
