--- a/public/app/partials/users.html
+++ b/public/app/partials/users.html
@@ -33,7 +33,7 @@
         </tr>
         </thead>
         <tbody>
-      <!--  ng-repeat="d in poje | filter:selects | orderBy:'country'" ng-controller="deleteCtrl"-->
+      <!-- <ng-repeat="d in poje | filter:selects | orderBy:'country'" ng-controller="deleteCtrl">-->
        <!-- <tr>
             <td>{{d.Id}}</td>
             <td>{{d.title}}</td>
@@ -46,7 +46,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <button class="btn btn-default btn-warning">{{d.delete}}</button>
             </td>
-        </tr>-->
+        </tr>-
         </tbody>
     </table>
 
