--- a/public/app/partials/users.html
+++ b/public/app/partials/users.html
@@ -12,6 +12,7 @@
                     <input type="text" name="title" ng-model="selects" class="col-lg-2 form-control" placeholder="关键字"
                            value="">
                 </div>
+               <!-- ng-repeat="d in poje | filter:selects | orderBy:'country'" ng-controller="deleteCtrl"-->
                 <button type="submit" class="btn btn-success">搜索</button>
                 <button ng-click="open({id:1,name:'基本类型'},'editorCtrl','lg')" id="split-button" type="button" class="btn btn-default">
                     <span class="glyphicon glyphicon-comment"></span>发表信息
@@ -33,8 +34,7 @@
         </tr>
         </thead>
         <tbody>
-      <!-- <ng-repeat="d in poje | filter:selects | orderBy:'country'" ng-controller="deleteCtrl">-->
-       <!-- <tr>
+        <tr>
             <td>{{d.Id}}</td>
             <td>{{d.title}}</td>
             <td>{{d.CreateTime}}</td>
@@ -58,7 +58,4 @@
 </div>
 </div>
 
-<hr/>
-<footer class="footer-logo">
-    <p class="text-center text-success"><strong>用户页面@</strong></p>
-</footer>
+        </tbody>
