--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,10 +35,9 @@ a:hover {
 }
 
 .footer {
+    margin-top: 50px;
     background-color: #f5f5f5;
-    bottom: 0;
     height: 60px;
-    position: absolute;
     width: 100%;
 }
 
