add news column

--- a/public/app/partials/index.html
+++ b/public/app/partials/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="text-center">
-        <a class="btn  btn-lg btn-success" href="#/page2">下一页</a>
+        <a class="btn  btn-lg btn-success" href="">更多</a>
     </div>
 </div>
 
