--- a/public/app/partials/picture.html
+++ b/public/app/partials/picture.html
@@ -49,7 +49,7 @@
         </tbody>
     </table>
 
-    <div id="page" ng-controller="testController">
+    <div id="page" ng-controller="pageCtrl">
         <tm-pagination conf="paginationConf"></tm-pagination>
     </div>
 </div>
