--- a/public/app/partials/users.html
+++ b/public/app/partials/users.html
@@ -34,28 +34,25 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
+       <!-- <tr>
             <td>{{d.Id}}</td>
             <td>{{d.title}}</td>
             <td>{{d.CreateTime}}</td>
             <td>{{d.size}}</td>
             <td>{{d.SpaceRange}}</td>
             <td>{{d.type}}</td>
-
+            <td>
                 <button class="btn btn-default btn-success">{{d.operation}}</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <button class="btn btn-default btn-warning">{{d.delete}}</button>
             </td>
-        </tr>-
+        </tr>-->
         </tbody>
     </table>
 
-    <div id="page" ng-controller="testController">
+    <div id="page" ng-controller="pageCtrl">
         <tm-pagination conf="paginationConf"></tm-pagination>
     </div>
 
 
 </div>
-</div>
-
-        </tbody>
