--- a/public/app/partials/insideLetter.html
+++ b/public/app/partials/insideLetter.html
@@ -59,6 +59,6 @@
 </div>
 
 <hr/>
-<footer class="footer-logo">
+<footer class="footer">
     <p class="text-center text-success"><strong>站内信@</strong></p>
 </footer>
