--- a/public/app/partials/index.html
+++ b/public/app/partials/index.html
@@ -15,7 +15,7 @@
                 </p>
                 <br>
                 <button class="btn btn-default btn-lg">
-                    <a href="#">
+                    <a href="#/newsAll">
                         查看全文
                     </a>
                 </button>
