--- a/public/app/partials/template/message.html
+++ b/public/app/partials/template/message.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label  class="col-sm-2 control-label">留言内容</label>
+            <label  class="col-sm-2 control-label">内容</label>
             <div class="col-sm-10">
                 <textarea type="text" rows="10" name="contant" class="form-control input-xxlarge" ng-model="user.control" id="contant"></textarea>
             </div>
