remove body min height

--- a/public/app/partials/news-details.html
+++ b/public/app/partials/news-details.html
@@ -1,6 +1,6 @@
-<div class="container text-center" ng-repeat="n in news">
+<div class="container" ng-controller="newsDetailCtrl">
     <h2>{{n.title}}</h2>
     <div class="text-info">
-        {{n.contant}}
+        {{n.content}}
     </div>
 </div>
