--- a/public/app/partials/index.html
+++ b/public/app/partials/index.html
@@ -5,22 +5,21 @@
         <div class="col-sm-9 col-md-10">
             <div ng-repeat="n in news">
                 <h1>
-                    <a href="#"> {{n.title}}</a>
+                    <a href="#/news/{{n._id}}"> {{n.title}}</a>
                 </h1>
                 <p>
                     August 30, 2015
                 </p>
                 <p>
-                    <strong> 会议如期举行，人气足，场地高大上，讲师给力</strong>
+                    <strong>{{n.content}}</strong>
                 </p>
                 <br>
                 <button class="btn btn-default btn-lg">
-                    <a href="#/newsAll">
+                    <a href="#/news/{{n._id}}">
                         查看全文
                     </a>
                 </button>
                 <hr>
-
             </div>
         </div>
         <div class="clearfix"></div>
