remove body min height

--- a/public/app/partials/picture.html
+++ b/public/app/partials/picture.html
@@ -4,7 +4,7 @@
 <div class="col-lg-10 col-md-10 col-sm-12" id="userCtainer">
     <p>
 
-    <div class="row" ng-controller="metadataCtrl">
+    <div class="row">
         <div class="col-lg-12" ng-controller="metadataToolbarCtrl">
             <div class="form-inline">
                 <div class="form-group ">
@@ -21,8 +21,7 @@
         </div>
     </div>
     </p>
-    <table class="table table-bordered table-hover table-condensed table-comparison text-center">
-        <thead>
+    <table class="table table-bordered table-hover table-condensed table-comparison text-center"><thead>
         <tr>
             <td>id</td>
             <td>商品名称</td>
@@ -48,7 +47,6 @@
          </tr>-->
         </tbody>
     </table>
-
     <div id="page" ng-controller="pageCtrl">
         <tm-pagination conf="paginationConf"></tm-pagination>
     </div>
