--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,17 +82,14 @@
                 <li><a href="#/register">注册</a></li>
                 <li ng-controller="messageCtrl"><a href="" ng-click="open('submitMessageCtrl','md')" >给我们留言</a></li>
             </ul>
-        </div><!--/.nav-collapse -->
+        </div>
     </div>
 </nav>
-
 <ng-view></ng-view>
-
 <div class="indicator-container">
     <div id="indicator" class="alert animated" ng-if="indicator" ng-class="getClass()">
         {{message}}
-        <button ng-click="erase()" type="button" class="close" aria-label="Close"><span
-                    aria-hidden="true">&times;</span></button>
+        <button ng-click="erase()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     </div>
 </div>
 <footer class="footer">
@@ -101,6 +98,5 @@
         <p class="text-muted">&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </div>
 </footer>
-
 </body>
 </html>
