add news service

--- a/public/app/partials/index.html
+++ b/public/app/partials/index.html
@@ -1,6 +1,6 @@
 
 <div ng-include="'/app/partials/template/jumbotron.html'"></div>
-<div class="container" ng-controller="newsCtrl">
+<div class="container" ng-controller="lastNewsCtrl">
     <div class="row">
         <div class="col-sm-9 col-md-10">
             <div ng-repeat="n in news">
