--- a/public/app/partials/register.html
+++ b/public/app/partials/register.html
@@ -12,7 +12,7 @@
             <span class="error" ng-show="(registerForm.inputUser.$dirty) && registerForm.inputUser.$error.maxlength">
             长度不能大于10
             </span>
-             <span class="error" ng-show="(registerForm.inputUser.$dirty) && registerForm.inputUser.$error.minlength">
+             <span class="bg-danger" ng-show="(registerForm.inputUser.$dirty) && registerForm.inputUser.$error.minlength">
             长度不能小于２
             </span>
             </p>
