--- a/public/app/partials/admin/users.html
+++ b/public/app/partials/admin/users.html
@@ -1,12 +1,7 @@
-<div class="col-sm-3 col-md-2">
-    <div ng-include="'/app/partials/tamplate/nav.html'"></div>
-</div>
-
-<div class="col-lg-10 col-md-10 col-sm-12" id="userCtainer">
+<div class="col-lg-10 col-md-10 col-sm-10 col-sm-offset-2" id="userCtainer">
     <p>
-
-    <div class="row" ng-controller="metadataCtrl">
-        <div class="col-lg-12" ng-controller="metadataToolbarCtrl">
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-inline">
                 <div class="form-group ">
                     <input type="text" name="title" ng-model="selects" class="col-lg-2 form-control" placeholder="关键字"
@@ -14,10 +9,6 @@
                 </div>
                <!-- ng-repeat="d in poje | filter:selects | orderBy:'country'" ng-controller="deleteCtrl"-->
                 <button type="submit" class="btn btn-success">搜索</button>
-                <button ng-click="open({id:1,name:'基本类型'},'editorCtrl','lg')" id="split-button" type="button" class="btn btn-default">
-                    <span class="glyphicon glyphicon-comment"></span>发表信息
-                </button>
-
             </div>
         </div>
     </div>
@@ -34,6 +25,7 @@
         </tr>
         </thead>
         <tbody>
+
        <!-- <tr>
             <td>{{d.Id}}</td>
             <td>{{d.title}}</td>
@@ -49,10 +41,4 @@
         </tr>-->
         </tbody>
     </table>
-
-    <div id="page" ng-controller="pageCtrl">
-        <tm-pagination conf="paginationConf"></tm-pagination>
-    </div>
-
-
 </div>
