--- a/public/app/partials/admin/message-manage.html
+++ b/public/app/partials/admin/message-manage.html
@@ -1,7 +1,14 @@
 <div class="container-fluid">
     <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+            <ul class="nav nav-sidebar">
+                <li class="active"><a href="#">用户</a></li>
+                <li><a href="#">新闻</a></li>
+                <li><a href="#">留言</a></li>
+            </ul>
+        </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">新闻</h1>
+            <h1 class="page-header">留言</h1>
             <div class="sub-header">
                 <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span>新增用户</button>
                 <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span>修改用户</button>
