--- a/public/app/partials/admin/users-manage.html
+++ b/public/app/partials/admin/users-manage.html
@@ -1,13 +1,12 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">新闻</h1>
+            <h1 class="page-header">用户</h1>
             <div class="sub-header">
                 <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span>新增用户</button>
                 <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span>修改用户</button>
                 <button class="btn btn-default"><span class="glyphicon glyphicon-remove"></span>删除</button>
             </div>
-            <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
                     <tr>
@@ -134,6 +133,6 @@
                     </tbody>
                 </table>
             </div>
-        </div>
+
     </div>
 </div>
