--- a/public/app/partials/index.html
+++ b/public/app/partials/index.html
@@ -6,20 +6,18 @@
                 <h1>
                     <a href="#/news/{{n._id}}"> {{n.title}}</a>
                 </h1>
-
                 <p>
                     August 30, 2015
                 </p>
-
                 <p>
-                    <strong>{{n.content}}</strong>
+                    <strong> 会议如期举行，人气足，场地高大上，讲师给力</strong>
                 </p>
                 <br>
-                <a class="btn btn-default btn-group-lg" href="#/news/{{n._id}}">
+                <a class="btn btn-default btn-lg" href="#/news/{{n._id}}">
                     查看全文
                 </a>
-
                 <hr>
+
             </div>
         </div>
         <div class="clearfix"></div>
