rename controller files

--- a/public/app/partials/news-details.html
+++ b/public/app/partials/news-details.html
@@ -1,5 +1,6 @@
 <div class="container" ng-controller="newsDetailCtrl">
     <h2>{{n.title}}</h2>
+    <div><label>作者：</label>{{n.name}}</div>
     <div class="text-info">
         {{n.content}}
     </div>
