--- a/public/app/partials/index.html
+++ b/public/app/partials/index.html
@@ -7,10 +7,10 @@
                     <a href="#/news/{{n._id}}"> {{n.title}}</a>
                 </h1>
                 <p>
-                    August 30, 2015
+                   <label>作者：</label>{{n.name}}
                 </p>
                 <p>
-                    <strong> 会议如期举行，人气足，场地高大上，讲师给力</strong>
+                    <strong>{{n.content}}</strong>
                 </p>
                 <br>
                 <a class="btn btn-default btn-lg" href="#/news/{{n._id}}">
