--- a/public/app/partials/template/message.html
+++ b/public/app/partials/template/message.html
@@ -5,7 +5,7 @@
 <form id="data-create" method="post" class="form-horizontal" action="" name="forms" novalidate>
     <div class="panel-body">
         <div class="form-group">
-            <label  class="col-sm-2 control-label">作者</label>
+            <label  class="col-sm-2 control-label">姓名</label>
             <div class="col-sm-10">
                 <input type="text"  name="author" class="form-control input-xxlarge" ng-model="user.author" id="author" ng-minlength="2" ng-maxlength="15" value="" placeholder="" required><br>
                 <span class="error" ng-show="forms.author.$dirty && forms.author.$error.required">作者不能为空</span>
