--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,6 +53,8 @@
     <script src="/app/controller/user-ctrl.js"></script>
     <script src="/app/controller/message-ctrl.js"></script>
     <script src="/app/service/news-service.js"></script>
+    <script src="/app/service/user-service.js"></script>
+    <script src="/app/directive/password-directive.js"></script>
 </head>
 <body ng-controller="indicatorsCtrl">
 <nav class="navbar navbar-default navbar-fixed-top" ng-controller="navCtrl">
