--- a/public/app/partials/register.html
+++ b/public/app/partials/register.html
@@ -1,9 +1,9 @@
 <div class="registerContainer container">
     <div class="col-sm-3 col-md-3 col-md-offset-4 col-sm-offset-4">
-        <form name="registerForm" novalidate>
+        <form name="registerForm" novalidate ng-controller="userCtrl">
             <h2 class="orm-signin-heading">欢迎您注册</h2>
             <p>
-                <input type="email" id="email" ng-model="email" name="email" class="form-control"
+                <input type="email" id="email" ng-model="user.email" name="email" class="form-control"
                        placeholder="请输入您的email" required>
                 <span class="text-danger error" ng-show="registerForm.email.$invalid && registerForm.email.$dirty">
                 <span ng-show="registerForm.email.$error.required">
@@ -13,43 +13,43 @@
             </span>
             </p>
             <p>
-                <input type="text" id="name" ng-model="name" name="name" class="form-control" placeholder="请输入您的真实姓名"
+                <input type="text" id="name" ng-model="user.name" name="name" class="form-control" placeholder="请输入您的真实姓名"
                        required>
                 <span class="error text-danger" ng-show="registerForm.name.$invalid && registerForm.name.$dirty">
                 <span ng-show="registerForm.name.$error.required">您的真实姓名不能位空</span>
                     </span>
             </p>
             <p>
-                <input type="password" name="user_password" ng-model="vm.user.password"
-                       required="" ng-maxlength="20" ng-minlength="6" class="form-control"
+                <input type="password" name="password" ng-model="user.password"
+                       required ng-maxlength="20" ng-minlength="6" class="form-control"
                        placeholder="请输入密码6-20个字符">
                 <span class="error text-danger"
-                      ng-show="(registerForm.user_password.$dirty) && registerForm.user_password.$error.required">密码不能为空！</span>
+                      ng-show="(registerForm.password.$dirty) && registerForm.password.$error.required">密码不能为空！</span>
                 <span class="error text-danger"
-                      ng-show="(registerForm.user_password.$dirty) && registerForm.user_password.$error.maxlength">密码长度不能大于20个字符！</span>
+                      ng-show="(registerForm.password.$dirty) && registerForm.password.$error.maxlength">密码长度不能大于20个字符！</span>
                 <span class="error text-danger"
-                      ng-show="(registerForm.user_password.$dirty) && registerForm.user_password.$error.minlength">密码长度不能小于6个字符！</span>
+                      ng-show="(registerForm.password.$dirty) && registerForm.password.$error.minlength">密码长度不能小于6个字符！</span>
             </p>
 
-            <p ng-controller="ctrl.form.dependency">
-                <input type="password" name="user_repeat_password" ng-model="vm.user.repeat_password"
-                       required="" ng-maxlength="20" ng-minlength="6" repeat="user_password" class="form-control"
+            <p>
+                <input type="password" name="confirm_password" ng-model="user.password_verify" password-verify="user.password"
+                       required ng-maxlength="20" ng-minlength="6" repeat="user_password" class="form-control"
                        placeholder="再次输入密码">
                 <span class="error text-danger"
-                      ng-show="(registerForm.user_repeat_password.$dirty) && registerForm.user_repeat_password.$error.required">密码不能为空！</span>
+                      ng-show="(registerForm.confirm_password.$dirty) && registerForm.confirm_password.$error.required">密码不能为空！</span>
                 <span class="error text-danger"
-                      ng-show="(registerForm.user_repeat_password.$dirty) && registerForm.user_repeat_password.$error.maxlength">密码长度不能大于20个字符！</span>
+                      ng-show="(registerForm.confirm_password.$dirty) && registerForm.confirm_password.$error.maxlength">密码长度不能大于20个字符！</span>
                 <span class="error text-danger"
-                      ng-show="(registerForm.user_repeat_password.$dirty) && registerForm.user_repeat_password.$error.minlength">密码长度不能小于6个字符！</span>
+                      ng-show="(registerForm.confirm_password.$dirty) && registerForm.confirm_password.$error.minlength">密码长度不能小于6个字符！</span>
                 <span class="error text-danger"
-                      ng-show="(registerForm.user_repeat_password.$dirty) && registerForm.user_repeat_password.$error.repeat">两次密码输入不一致！</span>
+                      ng-show="(registerForm.confirm_password.$dirty) && registerForm.confirm_password.$error.passwordVerify">两次密码输入不一致！</span>
             </p>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" value="remember-me"><span class="text-primary">记住我</span>
+                    <input type="checkbox" value="remember-me" ng-model="user.rememberMe"><span class="text-primary">记住我</span>
                 </label>
             </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit" ng-disabled="registerForm.$invalid">
+            <button class="btn btn-lg btn-primary btn-block" type="submit" ng-disabled="registerForm.$invalid" ng-click="register(user)">
                 注册
             </button>
         </form>
