--- a/public/app/partials/admin/news-manage.html
+++ b/public/app/partials/admin/news-manage.html
@@ -8,7 +8,7 @@
                 <button class="btn btn-default"><span class="glyphicon glyphicon-remove"></span>删除</button>
             </div>
             <div class="table-responsive">
-                <table class="table table-striped">
+                <table class="table table-striped table-hover">
                     <thead>
                     <tr>
                         <th>#</th>
@@ -133,6 +133,18 @@
                     </tr>
                     </tbody>
                 </table>
+                <ul class="pagination">
+                    <li class="disabled"><a href="#">&laquo;</a></li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li><a href="#">6</a></li>
+                    <li><a href="#">7</a></li>
+                    <li><a href="#">8</a></li>
+                    <li><a href="">&raquo;</a></li>
+                </ul>
             </div>
         </div>
     </div>
