--- a/public/app/partials/admin/users-manage.html
+++ b/public/app/partials/admin/users-manage.html
@@ -7,7 +7,7 @@
                 <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span>修改用户</button>
                 <button class="btn btn-default"><span class="glyphicon glyphicon-remove"></span>删除</button>
             </div>
-                <table class="table table-striped">
+                <table class="table table-striped table-hover">
                     <thead>
                     <tr>
                         <th>#</th>
@@ -132,7 +132,19 @@
                     </tr>
                     </tbody>
                 </table>
-            </div>
+            <ul class="pagination">
+                <li class="disabled"><a href="#">&laquo;</a></li>
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li><a href="#">6</a></li>
+                <li><a href="#">7</a></li>
+                <li><a href="#">8</a></li>
+                <li><a href="">&raquo;</a></li>
+            </ul>
+        </div>
 
     </div>
 </div>
