--- a/public/app/partials/index.html
+++ b/public/app/partials/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="text-center">
-        <a class="btn  btn-lg btn-success" href="">更多</a>
+        <a class="btn  btn-lg btn-success" href="#/news">更多</a>
     </div>
 </div>
 
