--- a/public/app/partials/register.html
+++ b/public/app/partials/register.html
@@ -1,6 +1,6 @@
 <div class="registerContainer container">
     <div class="col-sm-3 col-md-3 col-md-offset-4 col-sm-offset-4">
-        <form name="registerForm" novalidate ng-controller="userCtrl">
+        <form name="registerForm" novalidate ng-controller="registerCtrl">
             <h2 class="orm-signin-heading">欢迎您注册</h2>
             <p>
                 <input type="email" id="email" ng-model="user.email" name="email" class="form-control"
