--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -31,11 +31,10 @@
                     })
                 })
     </script>
-    <script src="/app/controller/common.js"></script>
+    <script src="/app/controller/common-ctrl.js"></script>
 </head>
 <body>
 <div ng-include="'/app/partials/template/nav.html'"></div>
-
     <div class="row">
         <div class="col-sm-2 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
