--- a/public/app/partials/template/nav.html
+++ b/public/app/partials/template/nav.html
@@ -7,7 +7,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#/users-manage">technicalSalon</a>
         </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span title="个人信息" class="glyphicon glyphicon-user"></span></a></li>
+                <li><a href="#"><span title="退出登陆" class="glyphicon glyphicon-log-out"></span></a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+                <input type="text" class="form-control" placeholder="Search...">
+            </form>
         </div>
-    </nav>
+    </div>
+</nav>
